Add some way to see which upstream repo triggered

--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -9,7 +9,11 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
-
+    inputs:
+      app:
+        description: 'app'
+        required: false
+        default: 'all'
 jobs:
   build:
 
@@ -25,6 +29,7 @@ jobs:
         cache-dependency-path: cypress/package-lock.json
     - name: Start containers
       run: |
+        echo "Triggered by: ${{ github.event.inputs.app }}"
         echo "VITE_WEBAPP_PORT=80" > .env
         echo "DJANGO_SECRET_KEY="$(uuidgen) >> .env
         docker-compose up -d || docker-compose up -d
