--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
     inputs:
-      app:
+      trigger:
         description: 'app'
         required: false
         default: 'all'
@@ -29,7 +29,7 @@ jobs:
         cache-dependency-path: cypress/package-lock.json
     - name: Start containers
       run: |
-        echo "Triggered by: ${{ github.event.inputs.app }}"
+        echo "Triggered by: ${{ github.event.inputs.trigger }}"
         echo "VITE_WEBAPP_PORT=80" > .env
         echo "DJANGO_SECRET_KEY="$(uuidgen) >> .env
         docker-compose up -d || docker-compose up -d
