--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
     inputs:
-      app:
+      trigger:
         description: 'App to deploy, can be tmdb/webapp or an empty string, for deploying all'
         required: false
         default: ''
@@ -32,7 +32,7 @@ jobs:
           # Required: The WireGuard configuration to use for the tunnel.
           conf: ${{ secrets.WIREGUARD_CONFIG }}
           # Required: The script to run on the remote host after the tunnel is established.
-          script: "cd workspace/integration-tests && git pull && docker compose up -d --pull ${{ github.event.inputs.app }}"
+          script: "cd workspace/integration-tests && git pull && docker compose up -d --pull ${{ github.event.inputs.trigger }}"
 
       - name: Check errors
         if: ${{ failure() }}
