--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   deploy:
-    name: Setup wireguard connection, and run ssh-script
+    name: Setup wireguard connection, and deploy ${{ github.event.inputs.trigger }}
     runs-on: ubuntu-latest
 
     steps:
