--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,12 @@ services:
     ports:
       - "27017:27017"
     container_name: mongo
+#    command: --wiredTigerCacheSizeGB 16
     volumes:
       - "./persistent-data/mongo-data:/data/db"
     healthcheck:
       test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 5m
+      interval: 30s
       timeout: 20s
       start_period: 10s
 
@@ -39,8 +40,8 @@ services:
       - RABBITMQ_DEFAULT_PASS=${MQ_PASS:-password}
     healthcheck:
       test: rabbitmq-diagnostics -q ping
-      interval: 5m
-      timeout: 30s
+      interval: 30s
+      timeout: 3s
       start_period: 5s
 
   # Backends
@@ -89,6 +90,11 @@ services:
       rabbitmq:
         condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test: celery -A settings inspect ping
+      interval: 30s
+      timeout: 3s
+      start_period: 5s
     entrypoint: celery -A settings worker -l info
 
   # Frontend
