Using world network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "27017:27017"
     container_name: mongo
-#    command: --wiredTigerCacheSizeGB 16
+    command: --wiredTigerCacheSizeGB 16
     volumes:
       - "./persistent-data/mongo-data:/data/db"
     healthcheck:
@@ -95,7 +95,7 @@ services:
     healthcheck:
       test: celery -A settings inspect ping
       interval: 30s
-      timeout: 3s
+      timeout: 5s
       start_period: 5s
     entrypoint: celery -A settings worker -l info
 
@@ -114,3 +114,8 @@ services:
 
 volumes:
   mongo_data:
+
+networks:
+  default:
+    name: world
+    external: true
