--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -32,7 +32,7 @@ jobs:
         echo "Triggered by: ${{ github.event.inputs.trigger }}"
         echo "VITE_WEBAPP_PORT=80" > .env
         echo "DJANGO_SECRET_KEY="$(uuidgen) >> .env
-        docker-compose up -d || docker-compose up -d
+        docker compose up -d || docker compose up -d
         docker cp datasubset/tmdb.movie.json mongo:/
         docker cp datasubset/tmdb.flattened_movie.json mongo:/
         docker exec mongo mongoimport -d tmdb -c movie --mode upsert --jsonArray --type json --file tmdb.movie.json
@@ -47,5 +47,5 @@ jobs:
         docker compose logs; docker ps -a
     - name: Stop containers
       if: ${{ always() }}
-      run: docker-compose -f "docker-compose.yml" down
+      run: docker compose -f "docker-compose.yml" down
 
