--- a/cypress/package.json
+++ b/cypress/package.json
@@ -13,12 +13,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.38.1",
-    "@types/node": "^20.8.2",
-    "artillery": "^2.0.0-37",
-    "cypress": "^13.3.0",
-    "mongodb": "^5.9.1",
-    "playwright": "^1.38.1",
-    "typescript": "^5.2.2"
+    "@playwright/test": "^1.55.1",
+    "@types/node": "^24.5.2",
+    "artillery": "^2.0.25",
+    "cypress": "^15.3.0",
+    "mongodb": "^6.20.0",
+    "playwright": "^1.55.1",
+    "typescript": "^5.9.2"
   }
 }
